# libcifpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  changelog
.github/workflows/: build-documentation.yml  cmake-multi-platform.yml
cmake/: FindAtomic.cmake  FindPCRE2.cmake  FindPCRE2x.cmake  FindSphinx.cmake  VersionString.cmake  cifpp-config.cmake.in  revision.hpp.in  test-charconv.cpp
docs/: CMakeLists.txt  Doxyfile.in  basics.rst  conf.py.in  cql.rst  index.rst  requirements.txt
examples/: CMakeLists.txt  example-cql.cpp  example.cpp
include/: cif++.hpp
include/cif++/: atom_type.hpp  category.hpp  compound.hpp  condition.hpp  cql.hpp  datablock.hpp  dictionary_parser.hpp  file.hpp  format.hpp  forward_decl.hpp  gzio.hpp  item.hpp  iterator.hpp  matrix.hpp  model.hpp  parser.hpp  pdb.hpp  point.hpp  row.hpp  symmetry.hpp  text.hpp  utilities.hpp  validate.hpp
include/cif++/cql/: transaction.hpp
pcre2-simple/: CMakeLists.txt
sqlite-backend/: CMakeLists.txt  cifpp2sqlite.cpp  template.c
src/: atom_type.cpp  category.cpp  compound.cpp  condition.cpp  cql.cpp  datablock.cpp  dictionary_parser.cpp  file.cpp  item.cpp  model.cpp  parser.cpp  point.cpp  row.cpp  symmetry.cpp  symop-map-generator.cpp  symop_table_data.hpp  text.cpp  utilities.cpp  validate.cpp
src/cql/: transaction.cpp
src/pdb/: cif2pdb.cpp  pdb2cif.cpp  pdb2cif_remark_3.cpp  pdb2cif_remark_3.hpp  pdb_record.hpp  reconstruct.cpp  validate-pdbx.cpp
src/sqlite3/: sqlite3.h
test/: 1cbs-dssp.cif  CMakeLists.txt  cql-test.cpp  insertion-codes-test.cpp  io-test.cpp  matrix-test.cpp  model-test.cpp  query-test.cpp  reconstruction-test.cpp  rename-compound-test.cpp  sugar-test.cpp  test-main.cpp  test-main.hpp  unit-3d-test.cpp  unit-v2-test.cpp  validate-pdbx-test.cpp
test/reconstruct/: 1cbs-seqscheme.cif  9d3j_fixDMC.cif  cif2fasta-1cbs_insert.cif  cif2fasta-1cbs_mutate.cif  cif2fasta-1cbs_mutate_extend.cif
tools/: depends.cmd  update-libcifpp-data.in
